# gtfs-router

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
data/: matches.csv
data/sacramento_2021_03_15/: Earth.kml  Patterns.txt  agency.txt  calendar.txt  calendar_dates.txt  feed_info.txt  report.prn  routes.txt  shapes.txt  stops.txt  transfers.txt  trips.txt
examples/: Sacramento Example.ipynb  Split Stop Times.ipynb  test_gtfs_router.py
src/gtfs_router/: __init__.py  build_transfers.py  utils.py
src/gtfs_router/raptor/: __init__.py  raptor.py  utils.py
src/gtfs_router/utils/: __init__.py  build_transfers.py  misc.py  shape_dist_traveled.py
