[metadata]
name = gtfs_router
version = 0.1
license = MIT License
description = Collection of GTFS Path Building Algorithms
long_description = Collection of GTFS Path Building Algorithms
author = WSP USA
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    geopandas
    numpy
    partridge
    pandas

[options.packages.find]
where=src
